--- a/ideaForge/Pages/LoginPages/OTPVerification.xaml
+++ b/ideaForge/Pages/LoginPages/OTPVerification.xaml
@@ -51,7 +51,7 @@
              Orientation="Horizontal"
             Margin="15,0,0,5" Height="26" VerticalAlignment="Bottom">
             <Label  Content="Didn't receive OTP?" Foreground="DimGray"/>
-            <Label MouseLeftButtonDown="Label_ResendOTPBTN" Foreground="#91c84f" FontWeight="Bold">Resend OTP</Label>
+            <Label MouseLeftButtonDown="Label_ResendOTPBTN" Foreground="#91c84f" MouseLeftButtonUp="Label_ResendOTPBTN" FontWeight="Bold">Resend OTP</Label>
         </StackPanel>
         <Button Grid.Row="6" 
                 Height="35"
