--- a/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
@@ -12,7 +12,10 @@
     <UserControl.DataContext>
         <vm:CompleteRideViewModel/>
     </UserControl.DataContext>
-    <Grid Background="#EEEEEF">
+
+    <UserControl.Content>
+        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+            <Grid Background="#EEEEEF">
         <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,0,20,0">
             <Image Source="/Images/LocationIcon.png" Height="14" Width="14"/>
             <Label Content="Navi Mumbai, Maharashtra" Foreground="Black" FontSize="16" />
@@ -43,7 +46,9 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding MissionName}" Height="35"  Foreground="Black">
+                                    <TextBox  
+                                        BorderBrush="#A9ABB1"
+                                        Text="{Binding MissionName}" Height="35"  Foreground="Black" Background="#F5F5F5">
                             </TextBox>
                         </StackPanel>
 
@@ -59,7 +64,9 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding TotalRequestedTime}" Height="35"  Foreground="Black">
+                                    <TextBox  
+                                        BorderBrush="#A9ABB1"
+                                        Text="{Binding TotalRequestedTime}" Height="35"  Foreground="Black" Background="#F5F5F5">
                             </TextBox>
                         </StackPanel>
 
@@ -75,7 +82,7 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding FlightDate}" Height="35"  Foreground="Black">
+                                    <TextBox BorderBrush="#A9ABB1" Text="{Binding FlightDate}" Height="35"  Foreground="Black" Background="#F5F5F5">
                             </TextBox>
                         </StackPanel>
 
@@ -90,7 +97,7 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding FlightTime}" Height="35"  Foreground="Black" Margin="15,0,0,0">
+                                    <TextBox BorderBrush="#A9ABB1" Text="{Binding FlightTime}" Height="35"  Foreground="Black" Margin="15,0,0,0" Background="#F5F5F5">
                             </TextBox>
                         </StackPanel>
 
@@ -112,7 +119,7 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="On" Height="35"  Foreground="Black" Margin="15,0,0,0">
+                                    <TextBox BorderBrush="#A9ABB1" Text="On" Height="35"  Foreground="Black" Margin="15,0,0,0" Background="#F5F5F5">
                             </TextBox>
                         </StackPanel>
 
@@ -128,7 +135,7 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="Yes" Height="35"  Foreground="Black" Margin="15,0,10,0">
+                                    <TextBox BorderBrush="#A9ABB1" Text="Yes" Height="35"  Foreground="Black" Margin="15,0,10,0" Background="#F5F5F5">
                             </TextBox>
                         </StackPanel>
 
@@ -144,7 +151,7 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding StatusForUser}" Height="35"  Foreground="Black">
+                                    <TextBox BorderBrush="#A9ABB1" Text="{Binding StatusForUser}" Height="35"  Foreground="Black" Background="#F5F5F5">
                             </TextBox>
                         </StackPanel>
 
@@ -159,7 +166,8 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="Drone landed" Height="35"  Foreground="Black" Margin="15,0,0,0">
+                                    <TextBox BorderBrush="#A9ABB1" Text="Drone landed" Height="35"  Foreground="Black" Margin="15,0,0,0"
+                                      Background="#F5F5F5">
                             </TextBox>
                         </StackPanel>
                     </Grid>
@@ -212,26 +220,25 @@
                                 </Label.Template>
                             </Label>
                             <Border CornerRadius="5" BorderBrush="#A9ABB1" BorderThickness="1" Margin="10,0,0,0">
-                                
-                                    <Grid>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="auto"/>
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*" MinWidth="120"/>
-                                            <ColumnDefinition Width="auto"/>
-                                        </Grid.ColumnDefinitions>
-                                    <TextBox BorderThickness="0" Text="27.2046° N" Height="35" Grid.Row="0" Grid.Column="0" Foreground="Black" IsEnabled="False" >
 
-                                    </TextBox>
+                                        <Grid 
+                                            Background="#F5F5F5">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="auto"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" MinWidth="120"/>
+                                        <ColumnDefinition Width="auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox BorderThickness="0" Text="27.2046° N" Height="35" Grid.Column="0" Foreground="Black" IsEnabled="False" Margin="0,0,5,0" />
                                     <Button  Height="10"  Width="14" BorderBrush="Transparent" Margin="0,0,10,0" Command="{Binding TextCopyLatitude_Comand}" Grid.Row="1" Grid.Column="1" IsEnabled="True">
                                         <Button.Background>
                                             <ImageBrush ImageSource="/Images/CopyTextIcon.png"/>
                                         </Button.Background>
                                     </Button>
                                 </Grid>
-                                    
-                               
+
+
                             </Border>
                         </StackPanel>
 
@@ -248,7 +255,7 @@
                                 </Label.Template>
                             </Label>
                             <Border CornerRadius="5" BorderBrush="#A9ABB1" BorderThickness="1" Margin="10,0,0,0">
-                                <Grid>
+                                        <Grid Background="#F5F5F5">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="auto"/>
                                     </Grid.RowDefinitions>
@@ -256,9 +263,7 @@
                                         <ColumnDefinition Width="*" MinWidth="120"/>
                                         <ColumnDefinition Width="auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBox BorderThickness="0" Text="77.4977° E" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
-
-                                    </TextBox>
+                                    <TextBox BorderThickness="0" Text="77.4977° E" Height="35" Grid.Column="0" IsEnabled="False" Foreground="Black" Margin="0,0,5,0"/>
                                     <Button  Height="10"  Margin="0,0,10,0" BorderBrush="Transparent" Command="{Binding TextCopyLONGITUDE_Comand}" Grid.Row="0" Grid.Column="1">
                                         <Button.Background>
                                             <ImageBrush ImageSource="/Images/CopyTextIcon.png"/>
@@ -281,22 +286,11 @@
                                 </Label.Template>
                             </Label>
                             <Border CornerRadius="5" BorderBrush="#A9ABB1" BorderThickness="1" Margin="10,0,0,0">
-                                <Grid>
+                                        <Grid Background="#F5F5F5">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="auto"/>
                                     </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*" MinWidth="120"/>
-                                        <ColumnDefinition Width="auto" />
-                                    </Grid.ColumnDefinitions>
-                                    <TextBox BorderThickness="0" Text="{Binding UAVId}"  Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
-
-                                    </TextBox>
-                                    <Button  Height="10" BorderBrush="Transparent" Command="{Binding TextCopyUAV_ID_Comand}" Grid.Row="0" Grid.Column="1" Margin="0,0,10,0">
-                                        <Button.Background>
-                                            <ImageBrush ImageSource="/Images/CopyTextIcon.png"/>
-                                        </Button.Background>
-                                    </Button>
+                                    <TextBox BorderThickness="0" Text="{Binding UAVId}"  Height="35" IsEnabled="False" Foreground="Black" Margin="0,0,10,0"/>
                                 </Grid>
                             </Border>
                         </StackPanel>
@@ -313,7 +307,7 @@
                                 </Label.Template>
                             </Label>
                             <Border CornerRadius="5" BorderBrush="#A9ABB1" BorderThickness="1" Margin="10,0,0,0">
-                                <Grid>
+                                        <Grid Background="#F5F5F5">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="auto"/>
                                     </Grid.RowDefinitions>
@@ -321,9 +315,7 @@
                                         <ColumnDefinition Width="*" MinWidth="120"/>
                                         <ColumnDefinition Width="auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBox BorderThickness="0" Text="{Binding ControlKey}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
-
-                                    </TextBox>
+                                    <TextBox BorderThickness="0" Text="{Binding ControlKey}" Height="35" Grid.Column="0" IsEnabled="False" Foreground="Black" Margin="0,0,5,0"/>
                                     <Button  Height="10" Width="15"  BorderBrush="Transparent" Command="{Binding TextCopyCONTROL_KEY_Comand}" Grid.Row="0" Grid.Column="1" Margin="0,0,10,0">
                                         <Button.Background>
                                             <ImageBrush ImageSource="/Images/CopyTextIcon.png"/>
@@ -343,7 +335,7 @@
                                 </Label.Template>
                             </Label>
                             <Border CornerRadius="5" BorderBrush="#A9ABB1" BorderThickness="1" Margin="10,0,-15,0">
-                                <Grid>
+                                        <Grid Background="#F5F5F5">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="auto"/>
                                     </Grid.RowDefinitions>
@@ -351,8 +343,7 @@
                                         <ColumnDefinition Width="*" MinWidth="120"/>
                                         <ColumnDefinition Width="auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBox BorderThickness="0" Text="{Binding SecretKey}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
-                                    </TextBox>
+                                    <TextBox BorderThickness="0" Text="{Binding SecretKey}" Height="35" Grid.Column="0" IsEnabled="False" Foreground="Black" Margin="0,0,5,0"/>
                                     <Button  Height="10" Width="15" BorderBrush="Transparent" Command="{Binding TextCopySECRET_KEY_Comand}" Grid.Row="0" Grid.Column="1" Margin="0,0,10,0">
                                         <Button.Background>
                                             <ImageBrush ImageSource="/Images/CopyTextIcon.png"/>
@@ -410,7 +401,9 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <Border BorderBrush="#A9ABB1" Height="35" BorderThickness="1" CornerRadius="5" IsEnabled="False" Margin="10,0,0,0">
+                            <Border BorderBrush="#A9ABB1" Height="35" 
+                                    Background="#F5F5F5"
+                                    BorderThickness="1" CornerRadius="5" IsEnabled="False" Margin="10,0,0,0">
                                 <StackPanel Orientation="Horizontal" Margin="5">
                                     <Image Source="/Images/FeedBackYellowStar.png" Height="20" Margin="5,0,0,0"/>
                                     <Image Source="/Images/FeedBackYellowStar.png" Height="20" Margin="5,0,0,0"/>
@@ -435,7 +428,8 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding UserFeedBack}" Height="35"  Foreground="Black">
+                            <TextBox  Text="{Binding UserFeedBack}" Height="35"  Foreground="Black"
+                                      Background="#F5F5F5">
                             </TextBox>
                         </StackPanel>
 
@@ -517,8 +511,8 @@
                                 </StackPanel>
 
 
-                    </Grid>
-                    <TextBox SelectedText="Type Feedback" SelectionTextBrush="#A9ABB1" Height="30" Margin="0,10,0,0" Foreground="Black"/>
+                            </Grid>
+                            <TextBox SelectedText="Type Feedback" SelectionTextBrush="#A9ABB1" Height="30" Margin="0,10,0,0" Foreground="Black"/>
                         </StackPanel>
                     </Grid>
                 </Border>
@@ -572,6 +566,9 @@
         </StackPanel>
 
     </Grid>
+
+        </ScrollViewer>
+    </UserControl.Content>
     <UserControl.Resources>
         <Style TargetType="{x:Type TextBox}">
             <Style.Setters>
